<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="GVL_eflex" Id="{6de9d307-102d-40ae-851f-39c10d303475}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	{attribute 'OPC.UA.DA' := '1'}
	bEflexPresent 	: BOOL := FALSE;
	sSpaModel		: STRING;
	fStudHeight		: REAL; // Column Height to lower spa onto base
	fFlipHeight		: REAL; // Column Height to flip spa at
	fBaseInHeight	: REAL; // Table height for recieving base
	fSpaOutHeight	: REAL; //Table height for unloading spa
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>